--- a/src/main/resources/application-eureka3.properties
+++ b/src/main/resources/application-eureka3.properties
@@ -15,4 +15,8 @@ server.port=8679
 eureka.instance.hostname=eureka3
 
 #设置服务注册中心地址，指向另一个注册中心
-eureka.client.serviceUrl.defaultZone=http://localhost:8671/eureka,http://localhost:8675/eureka
+eureka.client.serviceUrl.defaultZone=http://root:root@localhost:8671/eureka,http://root:root@localhost:8675/eureka
+#开启http basic认证
+security.basic.enabled=true
+security.user.name=root
+security.user.password=root
