--- a/src/main/resources/application-eureka1.properties
+++ b/src/main/resources/application-eureka1.properties
@@ -14,7 +14,8 @@ server.port=8671
 eureka.instance.hostname=eureka1
 
 #设置服务注册中心地址，指向另一个注册中心
-eureka.client.serviceUrl.defaultZone=http://localhost:8675/eureka,http://localhost:8679/eureka
-
-
-
+eureka.client.serviceUrl.defaultZone=http://root:root@localhost:8675/eureka,http://root:root@localhost:8679/eureka
+#开启http basic认证
+security.basic.enabled=true
+security.user.name=root
+security.user.password=root
